# advent-of-code-2025

./: .gitignore  README.md
day01/: LICENSE  day01.cabal
day01/app/: Main1.hs  Main2.hs
day02/: day02.cabal
day02/app/: Main1.hs  Main2.hs
day03/: day03.cabal
day03/app/: Main1.hs  Main2.hs
day04/: day04.cabal
day04/app/: Main1.hs  Main2.hs
day05/: day05.cabal
day05/app/: Main1.hs  Main2.hs
day06/: day06.cabal
day06/app/: Main1.hs  Main2.hs
day07/: day07.cabal
day07/app/: Main1.hs  Main2.hs
day08/: day08.cabal
day08/app/: Main1.hs  Main2.hs
day09/: day09.cabal
day09/app/: Main1.hs  Main2.hs
day10/: day10.cabal
day10/app/: Main1.hs  Main2.hs
day11/: day11.cabal
day11/app/: Main1.hs  Main2.hs
day12/: day12.cabal
day12/app/: Main1.hs
