cabal-version:      3.14
name:               day10
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             mehdidotcafe
maintainer:         contact@mehdi.cafe
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -O2 -threaded

executable day10
    import:           warnings
    main-is:          Main2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0, split ^>= 0.2.5, containers ^>= 0.7, z3
    hs-source-dirs:   app
    default-language: GHC2024