cabal-version:      3.14
name:               day11
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             mehdidotcafe
maintainer:         contact@mehdi.cafe
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day11
    import:           warnings
    main-is:          Main2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0, containers, MemoTrie
    hs-source-dirs:   app
    default-language: GHC2024
